build-log/satyrographos-22932-ece855.out
      ocamlc src/.satyrographos.objs/byte/satyrographos__Library.{cmi,cmti} (exit 2)
(cd _build/default && /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/bin/ocamlc.opt -w -40 -g -ppx '.ppx/b4175a47579235f9b841d5d1f64bf609/ppx.exe --as-ppx --cookie '\''library-name="satyrographos"'\''' -bin-annot -I src/.satyrographos.objs/byte -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/angstrom -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/base -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/base/base_internalhash_types -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/base/caml -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/base/md5 -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/base/shadow_stdlib -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/base_bigstring -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/base_quickcheck -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/bigstringaf -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/bin_prot -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/bin_prot/shape -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/bytes -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/core -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/core/error_checking_mutex -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/core_kernel -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/core_kernel/base_for_tests -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/core_kernel/caml_unix -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/core_kernel/flags -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/core_kernel/version_util -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/fieldslib -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/fileutils -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/jane-street-headers -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/json-derivers -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/ocaml/threads -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/ocamlgraph -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/opam-core -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/opam-file-format -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/opam-format -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/parsexp -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/posixat -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/ppx_assert/runtime-lib -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/ppx_bench/runtime-lib -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/ppx_compare/runtime-lib -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/ppx_deriving/runtime -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/ppx_enumerate/runtime-lib -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/ppx_expect/collector -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/ppx_expect/common -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/ppx_expect/config -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/ppx_expect/config_types -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/ppx_hash/runtime-lib -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/ppx_here/runtime-lib -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/ppx_inline_test/config -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/ppx_inline_test/runtime-lib -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/ppx_module_timer/runtime -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/ppx_sexp_conv/runtime-lib -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/re -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/result -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/seq -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/sexplib -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/sexplib/unix -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/sexplib0 -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/shexp/bigstring -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/shexp/bigstring-io -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/shexp/process -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/shexp/sexp -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/spawn -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/splittable_random -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/stdio -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/stdlib-shims -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/stringext -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/time_now -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/timezone -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/typerep -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/uri -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/uri-sexp -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/variantslib -I /home/runner/work/satyrographos-repo-bin/satyrographos-repo-bin/_opam/lib/yojson -no-alias-deps -open Satyrographos -o src/.satyrographos.objs/byte/satyrographos__Library.cmi -c -intf src/library.mli)
File "src/library.mli", line 10, characters 9-20:
10 |     ?buf:Bi_outbuf.t -> ?len:int -> ?std:bool -> t -> string
              ^^^^^^^^^^^
Error: Unbound module Bi_outbuf
fatal exception Failure("Command 'dune build -p satyrographos -j 2' exited with error code 1")
Raised at Stdlib.failwith in file "stdlib.ml", line 29, characters 17-33
Called from Cmdliner_term.app.(fun) in file "cmdliner_term.ml", line 24, characters 19-24
Called from Cmdliner_eval.run_parser in file "cmdliner_eval.ml", line 34, characters 37-44
Called from Cmdliner_eval.eval_value in file "cmdliner_eval.ml", line 202, characters 14-39
Called from Cmdliner_eval.eval in file "cmdliner_eval.ml", line 252, characters 2-45
Called from Ezcmd__V2.EZCMD.main_with_subcommands in file "src/ez_cmdliner/v2.ml", line 267, characters 15-161
Called from Opam_bin_lib__Main.main in file "src/opam_bin_lib/main.ml", line 45, characters 6-191

